--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=snakegame123
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=swipe_melody
+DATABASE_URL=postgresql://swipe_melody_discovery_database_user:isin8u3Aqaij7o8qmosgbnHvfcBhgmNb@dpg-d10qjuripnbc7393vh60-a.frankfurt-postgres.render.com/swipe_melody_discovery_database 
