--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 sqlalchemy==2.0.23
-mysqlclient==2.1.1
 alembic==1.12.1
 python-dotenv==1.0.0
 typing-extensions>=4.8.0
 tensorflow>=2.14.0 
+psycopg2-binary
